--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "framer-motion": "^10.12.16",
     "mongodb": "^5.4.0",
     "mongoose": "^7.1.0",
-    "next": "13.4.1",
+    "next": "^13.5.3",
     "next-auth": "^4.22.1",
     "node-cron": "^3.0.2",
     "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "3.3.2"
   }
 }
